@@ -12,8 +12,8 @@
 use strict;
 use warnings;
 
-use Gtk2::TestHelper tests => 6,
-    at_least_version => [2, 10, 0, "GtkIconView is new in 2.10"],
+use Gtk2::TestHelper tests => 14,
+    at_least_version => [2, 10, 0, "GtkRecentManager is new in 2.10"],
     ;
 
 isa_ok(Gtk2::RecentManager->get_default, 'Gtk2::RecentManager',
@@ -26,7 +26,7 @@ my $icon_theme = Gtk2::IconTheme->get_default;
 my $icon_info  = $icon_theme->lookup_icon('stock_edit', 24, 'use-builtin');
 
 SKIP: {
-	skip "add_item; theme icon not found", 5
+	skip "add_item; theme icon not found", 13
 		unless defined $icon_info;
 	
 	my $icon_file = $icon_info->get_filename;
@@ -48,7 +48,21 @@ SKIP: {
 	my $recent_info = $manager->lookup_item($icon_uri);
 	isa_ok($recent_info, 'Gtk2::RecentInfo', 'check recent_info');
 
-	is($recent_info->get_uri, $icon_uri, 'check URI');
+	is($recent_info->get_uri,          $icon_uri,                  'check URI' );
+	is($recent_info->get_display_name, 'Stock edit',               'check name');
+	is($recent_info->get_description,  'GTK+ stock icon for edit', 'check description');
+	is($recent_info->get_mime_type,    'image/png',                'check MIME');
+	
+	ok($recent_info->has_application('Eog'),         'check app/1');
+	ok(!$recent_info->has_application('Dummy Test'), 'check app/2');
+
+	ok($recent_info->is_local, 'check is local');
+	
+	my @app_info = $recent_info->get_application_info('Eog');
+	is(@app_info, 3, 'check app info');
+
+	my ($exec, $count, $stamp) = @app_info;
+	is($exec, 'eog ' . $icon_uri, 'check exec');
 
 	$manager->remove_item($icon_uri);
 	ok(!$manager->has_item($icon_uri), 'check remove item');
